# PayLoop

./: .gitattributes  .gitignore  .vercelignore  DEMO.md  README.md  SUBMISSION.md
.github/workflows/: contract.yml  deploy.yml  web.yml
contracts/: Cargo.toml  DEPLOYMENT.md  deployment.testnet.json
contracts/invoice/: Cargo.toml
contracts/invoice/src/: lib.rs  test.rs
contracts/invoice/test_snapshots/test/: cannot_initialize_twice.1.json  create_then_fund_pays_freelancer.1.json  double_funding_is_rejected.1.json  history_lists_freelancer_invoices_in_order.1.json  rejects_non_positive_amount.1.json  timestamps_are_recorded.1.json
docs/: ANCHOR.md  ARCHITECTURE.md  FEEDBACK.md  USERS.md
docs/screenshots/: README.md
web/: .env.example  .gitignore  README.md  instrumentation.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/app/activity/: page.tsx
web/app/api/debug-sentry/: route.ts
web/app/api/faucet/: route.ts
web/app/api/feedback/: route.ts
web/app/create/: page.tsx
web/app/dashboard/: page.tsx
web/app/pay/[id]/: page.tsx
web/app/withdraw/: page.tsx
web/components/: FaucetButton.tsx  FeedbackWidget.tsx  InvoiceCard.tsx  Navbar.tsx  TrustlineButton.tsx  WalletProvider.tsx  ui.tsx
web/lib/: config.ts  contract.ts  format.ts  wallet.ts
