[workspace]
resolver = "2"
members = ["invoice"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["PayLoop"]

[workspace.dependencies]
soroban-sdk = "27.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
